--- a/WebSite1/Contents/test.html
+++ b/WebSite1/Contents/test.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Index Page Title</title>
+    <title>Test Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>This is the index page</h1>
+    <h1>This is the test page xxx</h1>
 </body>
-</html>
+</html> 
