--- a/WebSite1/Contents/test.html
+++ b/WebSite1/Contents/test.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>This is the test page xxx</h1>
+    <h1>This is the test page</h1>
 </body>
 </html> 
