--- a/WebSite1/Contents/_indexold.html
+++ b/WebSite1/Contents/_indexold.html
@@ -6,22 +6,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>    
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='_grid.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='_main.css'>
     <script src='_main.js'></script>
 </head>
 
 <body>
-    <header>Header</header>
-    <nav>Side nav</nav>
-    <main>
-        <section>Intro</section>
-        <article>Article1</article>
-        <article>Article2</article>
-        <article>Article3</article>        
-    </main>    
-    <aside>Aside</aside>
-    <footer>Footer</footer>
+    <h1 id="header1">This is the index page YYY</h1>
+    <button class="button button1" onclick="showAlert()">Alert</button>
+    <button class="button button2" onclick="changeStyle()">Change Style</button>
     <script src='_index.js'></script>
 </body>
 
