--- a/WebSite1/Contents/_index.html
+++ b/WebSite1/Contents/_index.html
@@ -6,9 +6,9 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>    
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='_grid.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='_main.css'>
-    <script src='_main.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='grid.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     </main>    
     <aside>Aside</aside>
     <footer>Footer</footer>
-    <script src='_index.js'></script>
+    <script src='index.js'></script>
 </body>
 
 </html>
