_index.html+grid.css+main.js fixed toggling of the menu pannel with jQuery + introduced CSS variables + removed X button from menu pannel

--- a/WebSite1/Contents/_index.html
+++ b/WebSite1/Contents/_index.html
@@ -12,10 +12,9 @@
     <script src='main.js'></script>
 </head>
 
-<body>
-    <!-- <header>Header</header> -->
+<body>    
     <header>
-        <a class="logo" href="/#">Logo</a>
+        <a class="logo" href="/">Logo</a>
         <input class="searchbox" type="text" placeholder="Search..">
         <ol class="navbar">
             <li>
@@ -33,10 +32,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contacts</a></li>
-            <a class="close" href="">
-                <img src="https://ljc-dev.github.io/testing0/ham-close.svg" alt="close">
-            </a>
+            <li><a href="#">Contacts</a></li>            
         </ul>     
     </header>
     <nav>Side nav</nav>
