--- a/WebSite1/Contents/_index.html
+++ b/WebSite1/Contents/_index.html
@@ -32,19 +32,25 @@
     </header>
     <nav>Side nav</nav>
     <main>
-        <section>Intro</section>
-        <article>Article1</article>
+        <section>
+            Intro
+        </section>
+        <article>
+            Article1
+        </article>
         <article>Article2</article>
         <article>Article3</article>
-        <article>
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
+        <article>            
+            <p>
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
                 tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
                 semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien
                 ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.
                 Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
                 dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus,
                 tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi,
-                tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+                tincidunt quis, accumsan porttitor, facilisis luctus, metus
+            </p>
         </article>
         <article>
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
