simple changes to _index.html/js to allow dynamic loading of fragments of html and insertions intop the document with jquery

--- a/WebSite1/Contents/_index.html
+++ b/WebSite1/Contents/_index.html
@@ -36,7 +36,7 @@
             Intro
         </section>
         <article>
-            Article1
+            <div id="msgDiv"></div>
         </article>
         <article>Article2</article>
         <article>Article3</article>
