edited _index.html for article2

--- a/WebSite1/Contents/_index.html
+++ b/WebSite1/Contents/_index.html
@@ -36,9 +36,18 @@
             Intro
         </section>
         <article>
-            <div id="msgDiv"></div>
+            <div id="article1"></div>
         </article>
-        <article>Article2</article>
+        <article>
+            <!-- Article2 -->
+            <div id="article2" class="articleCard">
+                <div class="articleTitle">Title</div>
+                <div class="articleAuthor">Author</div>
+                <div class="articleTags">Tag1,Tag2</div>
+                <div class="articleDate">Date</div>
+                Some Content...
+            </div>
+        </article>
         <article>Article3</article>
         <article>            
             <p>
