_index.hml + index.js simplified example to test $(...).load(...) patterns

--- a/WebSite1/Contents/_index.html
+++ b/WebSite1/Contents/_index.html
@@ -39,16 +39,11 @@
             <div id="article1"></div>
         </article>
         <article>
-            <!-- Article2 -->
-            <div id="article2" class="articleCard">
-                <div class="articleTitle">Title</div>
-                <div class="articleAuthor">Author</div>
-                <div class="articleTags">Tag1,Tag2</div>
-                <div class="articleDate">Date</div>
-                Some Content...
-            </div>
+            <div id="article2"></div>
         </article>
-        <article>Article3</article>
+        <article>
+            <div id="msgDiv"></div>
+        </article>        
         <article>            
             <p>
                 Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
