article2.html simplified to test $().lod() cases

--- a/WebSite1/Contents/article2.html
+++ b/WebSite1/Contents/article2.html
@@ -1,9 +1,14 @@
-<div id="title">Article2</div>
+<div id="title">ArticleTitle2FromFragment</div>
+<!-- 
 <div id="author">Author</div>
 <div id="date">Date</div>
 <div id="tags">tags</div>
+<div id="myHtmlContent">This is my html content.</div> 
+-->
 
 <!-- https://www.tutorialsteacher.com/jquery/jquery-load-method -->
+<!-- 
 <div id="article2">
     This is Article2 text from blob storage! 
-</div>
+</div> 
+-->
